# Cufftdx_vs_Cufft

./: .gitignore  CMakeLists.txt  README.md
src/: cli.hpp  common.hpp  cufft_path.hpp  cufftdx_path.hpp  main.cu  workload.hpp
